# ChangeLog for app-arch/upx
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.2 2002/12/17 15:43:16 vapier Exp $

*upx-1.23 (21 Sep 2002)

  21 Sep 2002; Daniel Robbins <drobbins@gentoo.org> upx-1.23.ebuild: New
  pre-compiled version of upx for better compression and gcc-3.2-compatibility.
  Also moved from app-misc to app-arch.
  
*upx-1.22 (09 Jul 2002)

  09 Jul 2002; Phil Bordelon <sunflare@gentoo.org> upx-1.21.ebuild
  upx-1.22.ebuild : Version bump.  Cleaned up the ebuild a bit; added SLOT and
  KEYWORD to the older ebuild as well.  The new ebuild also does documentation.

*upx-1.21 (21 Jun 2002)

  21 Jun 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog : Initial
  release.