@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/upx
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.2 2002/12/17 15:43:16 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.3 2002/12/23 07:09:55 raker Exp $
+
+*upx-1.23-r1 (23 Dec 2002)
+
+  23 Dec 2002; Nick Hadaway <raker@gentoo.org> upx-1.23-r1.ebuild,
+  files/digest-upx-1.23-r1 :
+  emerge should no longer strip the upx binary.
 
 *upx-1.23 (21 Sep 2002)
 
